add df method
