# routes/api.php
@@ -21,3 +21,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::get('/images',[ImageController::class,'getImage']);
 Route::post('/uploadImageApi',[ImageController::class,'uploadImageApi']);
+Route::post('/uploadImageDF',[ImageController::class,'uploadImageDF']);
